[gd_scene load_steps=9 format=2]

[ext_resource path="res://Ability/Channel/Channel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Ability/Channel/Abilities/FireTornado/FireTornado.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 20.0

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.551724 )
colors = PoolColorArray( 1, 0.857542, 0.643333, 1, 0.556667, 0.94415, 1, 1 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.486726, 0.9875 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 1
emission_sphere_radius = 20.0
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
gravity = Vector3( 200, -90, 0 )
initial_velocity = 10.0
angular_velocity = -720.0
angular_velocity_random = 1.0
orbit_velocity = 1.0
orbit_velocity_random = 0.0
linear_accel = -100.0
radial_accel = -100.0
radial_accel_random = 1.0
tangential_accel = 48.8
scale = 4.0
scale_random = 1.0
scale_curve = SubResource( 3 )
color_ramp = SubResource( 6 )

[node name="FireTornado" instance=ExtResource( 1 )]
script = ExtResource( 2 )
title = "Fire tornado"
cooldown = 1.0
mana_cost = 5
damage_tag = 1
damage = 0
is_not_spectate = true

[node name="HitBox" type="Area2D" parent="." index="2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource( 1 )

[node name="Particles2D" type="Particles2D" parent="." index="3"]
amount = 400
lifetime = 2.0
process_material = SubResource( 4 )

[connection signal="body_entered" from="HitBox" to="." method="_on_Hitbox_body_entered"]
[connection signal="body_exited" from="HitBox" to="." method="_on_Hitbox_body_exited"]
